--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700&display=swap');
 
 
 
@@ -8,7 +9,6 @@
     box-sizing: border-box;
     scroll-behavior: smooth;
     overflow-x: hidden;
-    font-family: 'Fredoka', sans-serif;
     direction: rtl;
 }
 
