--- a/src/components/CategoryCard/CategoryCard.css
+++ b/src/components/CategoryCard/CategoryCard.css
@@ -2,6 +2,7 @@
     width: 110px;
     height: 200px;
     border-radius: 15px;
+    font-size: 0.9rem;
     box-shadow: 1px 2px 5px 0px rgba(0,0,0,0.36);
     display: flex;
     justify-content: center;
