--- a/src/components/MiniCart/MiniCart.css
+++ b/src/components/MiniCart/MiniCart.css
@@ -3,18 +3,18 @@
     z-index: 999999;
     bottom: 0;
     left: 0;
-    margin-left: 20px;
+    margin-left: 15px;
     margin-bottom: 50px;
     background-color: #fff;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
-    width: 265px;
+    width: 275px;
     border-radius: 20px;
     padding: 8px;
     height: auto;
   }
   .product-row{
     display: flex;
-    padding: 3px 20px 5px 3px;
+    padding: 3px 5px 5px 3px;
     justify-content: flex-start;
     gap: 15px;
     align-items: center;
@@ -27,3 +27,7 @@
     padding-top: 3px;
     background-color: transparent;
   }
+.total{
+  display: block;
+  padding-top: 8px;
+}
